--- a/03_turborepo/snowtooth/apps/web/package.json
+++ b/03_turborepo/snowtooth/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@repo/elevation": "workspace:*",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -23,6 +24,7 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.20.0",
+    "jest": "^29.7.0",
     "typescript": "5.7.3"
   }
 }
