--- a/03_turborepo/snowtooth/packages/ui/package.json
+++ b/03_turborepo/snowtooth/packages/ui/package.json
@@ -20,6 +20,7 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.20.0",
+    "jest": "^29.7.0",
     "typescript": "5.7.3"
   },
   "dependencies": {
